@@ -1,0 +1,52 @@
+#!/bin/sh
+# Begin /etc/init.d/fcron
+
+### BEGIN INIT INFO
+# Provides:            fcron
+# Required-Start:      $network
+# Should-Start:        $remote_fs
+# Required-Stop:       $network
+# Should-Stop:         $remote_fs
+# Default-Start:       3 4 5
+# Default-Stop:        0 1 2 6
+# Short-Description:   Starts fcron.
+# Description:         Starts fcron daemon.
+# X-LFS-Provided-By:   BLFS
+### END INIT INFO
+
+. /lib/lsb/init-functions
+
+MESSAGE="FCron Daemon"
+BIN_FILE="/usr/sbin/fcron"
+PIDFILE="/var/run/fcron.pid"
+
+case "$1" in
+    start)
+        start_daemon -p "${PIDFILE}" "${BIN_FILE}"
+        evaluate_retval start
+    ;;
+
+    stop)
+        killproc -p "${PIDFILE}" "${BIN_FILE}"
+	evaluate_retval stop
+    ;;
+
+    restart)
+        killproc -p "${PIDFILE}" "${BIN_FILE}" &&
+        sleep 1 &&
+        start_daemon -p "${PIDFILE}" "${BIN_FILE}"
+	evaluate_retval restart
+    ;;
+
+    status)
+        statusproc -p "${PIDFILE}" "${BIN_FILE}"
+    ;;
+
+    *)
+        echo "Usage: $0 {start|stop|restart|status}"
+        exit 1
+    ;;
+
+esac
+
+# End /etc/init.d/fcron
